Add service contracts and skeletons
